apps/vaultwarden/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-service
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
  selector:
    app: vaultwarden
  type: ClusterIP
