apps/vaultwarden/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: stepca-prod
  name: vaultwarden
  namespace: default
spec:
  rules:
  - host: vaultwarden.kube.home
    http:
      paths:
      - backend:
          service:
            name: vaultwarden-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
    - secretName: vaultwarden-tls
      hosts:
        - vaultwarden.kube.home
