apps/vaultwarden/ts-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ts
spec:
  defaultBackend:
    service:
      name: vaultwarden-service
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - vaultwarden
